# Raspberry

./: .gitignore  README.md  TODO  install.sh  motion.conf  nginx.conf  reqirements  ssl
Debug/: Raspberry  makefile
Debug/src/: Raspberry.d  gpio_class.d  subdir.mk
MiniDriverFramework/MiniDriver/: MiniDriver.ino
Raspberry/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Raspberry/Debug/: Raspberry  makefile
Raspberry/Debug/src/: subdir.mk
Raspberry/Release/: Raspberry
Raspberry/Release/src/: subdir.mk
Raspberry/control/: CMakeLists.txt
Raspberry/control/src/: control_api.cpp  signal_handler.cpp  signal_handler.h
Raspberry/display/: CMakeLists.txt
Raspberry/display/src/: display_api.cpp  led_controller.cpp
Raspberry/hardware/: CMakeLists.txt
Raspberry/hardware/src/: gpio.cpp  gpio.h  hardware_api.cpp  mini_driver_hw.cpp  serial.cpp  serial.h  serial_singleton.cpp  serial_singleton.h
Raspberry/hardware/src/serial/: serial.h  serial_singleton.cpp  serial_singleton.h
Raspberry/hardware/src/serial/boost_serial/: blocking_reader.cpp  blocking_reader.h  boost_serial.cpp  boost_serial.h
Raspberry/hardware/src/serial/termios_serial/: termios_serial.cpp  termios_serial.h
Raspberry/interface/control/: control_api.h
Raspberry/interface/display/: display_api.h  led_controller.h
Raspberry/interface/hardware/: gpio.h  hardware_api.h  mini_driver_hw.h
Raspberry/interface/sensors/: sensors_api.h
Raspberry/sensors/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sensors_api.cpp
Raspberry/sensors/src/: sensors_api.cpp
Raspberry/startup/: CMakeCache.txt  CMakeLists.txt  Makefile  Raspberry  cmake_install.cmake  main.cpp
Raspberry/startup/src/: main.cpp
Raspberry/test/: CMakeLists.txt
Raspberry/test/display/: CMakeLists.txt  display_test  led_controller_test.cpp
Raspberry/test/display/mocks/: gpio_mock.h
RaspberryPy/: Raspberry.py  reqirements
RaspberryPy/controller/: Controller.py  MiniDriver.py
RaspberryPy/web/: bower.json
RaspberryPy/web/app/: app.config.js  app.css  app.js  (+1 more)
analyzer_service/: analyzer.py  analyzer_service  app.py  controller_client.py  nano_client.py  run.sh
camera/camera_service/: app.py  ball_detector.py  face_detector.py  object_detector.py
components/: build.gradle  settings.gradle
components/configuration/: tox.gradle
components/controller/: MANIFEST.in  build.gradle  gunicorn.conf  run.sh  setup.cfg  setup.py  tox.ini
conf/: configure_motion.sh  configure_nginx.sh  configure_python.sh  configure_services.sh  configure_usb.sh  create_service.sh  gen_pygradle_repo.sh  gen_service.sh  motion.conf  nginx.conf  nginx_http.conf  rc.local  requirements.txt  service
controller/: Controller.py  MiniDriver.py  Raspberry.py  app.py  controller  controller.py  gunicorn.conf  init_data.json  mini_driver.py  pan_tilt.py  raspberry.py  run.sh
controller/controller_service/: alarm_processor.py  analyzer.py  app.py  event_analyzer.py
controller/processors/: mini_driver_processor.py  nano_processor.py
controller/rest/: mini_driver_api.py  nano_api.py
controller_service/: alarm_processor.py  app.py  controller_service  gunicorn.conf  mini_driver_client.py  nano_client.py  run.sh
face_detector/: app.py  image_analyzer.py  run.sh
face_detector/face_detector_client/: detect_face.sh  setup.py
face_detector/face_detector_service/: app.py  face_detector.py  gunicorn.conf  image_analyzer.py  position_calculator.py  run.sh  stream_reader.py
mini_driver/: mini_driver.ino
mini_driver/mini_driver_arduino/: mini-driver-usb-serial.rules
mini_driver/mini_driver_client/: setup.py
mini_driver/mini_driver_service/: app.py  gunicorn.conf  mini_driver.py  mini_driver_service
mini_driver_service/: app.py  mini_driver.py  mini_driver_service  server.crt  server.key
mono/mono_client/: setup.py
mono/mono_service/: alarm_processor.py  app.py  gunicorn.conf  mini_driver.py  nano.py
nano/: nano.ino
nano/nano_arduino/: nano-usb-serial.rules
nano/nano_client/: setup.py
nano/nano_service/: app.py  gunicorn.conf  nano_service
nano_service/: app.py  gunicorn.conf  nano.py  run.sh
obstacle_detector/: app.py  obstacle_detector.py
servo_service/: app.py  gunicorn.conf  run.sh  servo.py  servo_pwm.py  servo_service
src/: Raspberry.cpp  gpio_class.cpp  gpio_class.h
web/: bower.json  package.json
web/app/: app.config.js  app.css  app.js  index.html
(+78 files in other folders)
